// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox snapshot Checkbox: 0 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    id="checkbox1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator"
  />
</div>
`;

exports[`checkbox snapshot Checkbox: 1 1`] = `
<div
  className="checkbox"
>
  <input
    checked={true}
    className="checkbox_input"
    disabled={null}
    id="checkbox2"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator"
  />
</div>
`;

exports[`checkbox snapshot Checkbox: 2 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    id="checkbox3"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator"
  />
</div>
`;

exports[`checkbox snapshot Checkbox: 3 1`] = `
<div
  className="checkbox checkbox__disabled"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={true}
    id="checkbox4"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator"
  />
</div>
`;
